--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    name\n",
+    "    nameofplace = \n",
     "    return restaurant_name\n",
     "    pass"
    ]
