Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,8 +201,8 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    nameofplace = \n",
-    "    return restaurant_name\n",
+    "    nameofplace = restaurant[name.title()]\n",
+    "    return restaurant_nam\n",
     "    pass"
    ]
   },
