--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    nameofplace = restaurant[name.title()]\n",
+    "    nameofplace = name.title()\n",
     "    return nameofplace\n",
     "    pass"
    ]
