Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,22 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['categories', 'coordinates', 'display_phone', 'distance', 'id', 'image_url', 'is_closed', 'location', 'name', 'phone', 'price', 'rating', 'review_count', 'transactions', 'url'])"
+       "'Frontier Restaurant'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frontier_restaurant.keys()"
+    "frontier_restaurant.keys()\n",
+    "frontier_restaurant['name']"
    ]
   },
   {
