--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    nameofplace = name.title()\n",
+    "    nameofplace = restaurant['name']\n",
     "    return nameofplace\n",
     "    pass"
    ]
