--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    resrating\n",
+    "    restaurant['rating'] == \n",
     "    pass"
    ]
   },
