--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,9 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] == alternative['rating']\n",
+    "    resrate = restaurant['rating']\n",
+    "    altrate = alternative['rating']\n",
+    "    resr\n",
     "    return \n",
     "    pass"
    ]
