--- a/index.ipynb
+++ b/index.ipynb
@@ -322,21 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    resrate = restaurant['rating']\n",
     "    altrate = alternative['rating']\n",
-    "    decision = resrate = altrate\n",
+    "    decision = resrate >= altrate\n",
+    "    if decision\n",
     "    return decision\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +346,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +386,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
