Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
     "def is_better(restaurant, alternative):\n",
     "    resrate = restaurant['rating']\n",
     "    altrate = alternative['rating']\n",
-    "    decision = resrate >= altrate\n",
+    "    decision = resrate > altrate\n",
     "    return decision\n",
     "    pass"
    ]
