Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,8 @@
    "outputs": [],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "    \n",
+    "    resprice = restaurant['price']\n",
+    "    altpric\n",
     "    pass"
    ]
   },
