Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,8 @@
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
     "    resprice = restaurant['price']\n",
-    "    altpric\n",
+    "    altprice = alternative['price']\n",
+    "    decision\n",
     "    pass"
    ]
   },
