Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
     "def is_cheaper(restaurant, alternative):\n",
     "    resprice = restaurant['price']\n",
     "    altprice = alternative['price']\n",
-    "    decision\n",
+    "    decision = resprice \n",
     "    pass"
    ]
   },
