Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -496,6 +496,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
+    "    resrating = restaurant['rating']\n",
+    "    decisio\n",
     "    pass"
    ]
   },
