--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    resrating = restaurant['rating']\n",
-    "    decisio\n",
+    "    decision = resrating>=\n",
     "    pass"
    ]
   },
